fix spacing

--- a/src/pages/reviews/id/styles.module.scss
+++ b/src/pages/reviews/id/styles.module.scss
@@ -1,7 +1,7 @@
 .contentContainer {
   border-radius: 6px;
   background-color: $light;
-  margin-top: 10px;
+  margin: 10px 0;
   padding: 10px;
   white-space: pre-line;
 }
